# xar_thread

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
xar_thread/: CMakeLists.txt
xar_thread/include/xar_thread/: dummy.hpp  spinlock.hpp
xar_thread/src/xar_thread/: dummy.cpp  spinlock.cpp
xar_thread/test/unit/: CMakeLists.txt
xar_thread/test/unit/xar_thread/: dummy_test.cpp  spinlock_test.cpp
